# kivi_app

./: Podfile  README.md  fly.toml  home_data.json  pyproject.toml  requirements.txt
.github/workflows/: ios-build.yml  manual-build-macos-PyInst.yml  manual-build-windows-PyInst.yml  manual-build-windows.yml  manual-build.yml
.idx/: dev.nix
icon_generator/: generate_icons.py
src/: app_data.db  app_data_base.db  main.py  routes.py  run_example.py
src/assets/: VivaLearn.mobileconfig  download.html  index.html  manifest.json
src/assets/apps/: apps.json
src/assets/icons/: main.py
src/assets/test/: index.html  manifest.json
src/components/: data.py  database_manager.py  progress_bar.py  test_item.py  theme.py
src/views/: favorites_view.py  history_view.py  home_view.py  login_view.py  news_feed_view.py  order_view.py  profile_view.py  progress_view.py  search_view.py  test_details_view.py  user_info_view.py  user_view.py  user_view_edite.py
