[project]
name = "my_flet_app"  # Изменено с "flet" на другое название
version = "0.1.3"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet==0.26.0"  # Основная зависимость
]

[tool.flet]
# org name в формате reverse domain name notation
org = "com.mycompany"

# Отображаемое имя проекта
product = "flet"

# Название компании
company = "Flet"

# Копирайт
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.poetry]
package-mode = false
