[project]
name = "KIVI Retail DEV"  # Изменено с "flet" на другое название
version = "0.1.3"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet==0.26.0"  # Основная зависимость
]

[tool.flet]
# org name в формате reverse domain name notation
org = "com.kivi.app.retail"

# Отображаемое имя проекта
product = "Retail"

# Название компании
company = "KIVI UA"

# Копирайт
copyright = "Copyright (C) 2025 by KIVI"

[tool.flet.app]
path = "src"

[tool.poetry]
package-mode = false
